--- a/style.css
+++ b/style.css
@@ -5,8 +5,11 @@
   box-sizing: border-box;
 }
 
-/* Font import */
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap');
+a {
+  text-decoration: none;
+  color: inherit;
+  background-color: transparent;
+}
 
 /* Global Rules */
 :root {
@@ -26,6 +29,17 @@
   --font-family: 'Outfit', sans-serif;
   font-size: 16px;
   line-height: 1.25;
+  color: var(--soft-blue);
+}
+
+/* Transitions */
+a,
+.card,
+.card .img,
+.overlay,
+.eye img,
+.custom-text {
+  transition: all 0.3s ease-in-out;
 }
 
 h1 {
@@ -36,12 +50,15 @@ h1 {
 
 body {
   font-family: var(--font-family);
+  font-feature-settings: 'clig' off, 'liga' off;
+  font-style: normal;
+  line-height: normal;
 }
 
 .container {
   width: 100%;
-  min-height: 56.25rem;
   max-width: var(--site-width);
+  min-height: 100vh;
   margin: 0 auto;
   background-color: var(--very-dark-blue-main-bg);
   display: flex;
@@ -54,12 +71,68 @@ body {
   width: 100%;
   padding: 1.5rem 1.5rem 2rem 1.5rem;
   background-color: var(--very-dark-blue-card-bg);
-  border-radius: 15px;
+  border-radius: 0.9375rem;
+  box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 0.10);
 }
 
 .card .img {
+  position: relative;
+  max-width: 100%;
   width: 100%;
   max-height: 18.875rem;
+  height: 100%;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.card .img .hover:hover .overlay,
+.card .img .hover:hover .eye img {
+  opacity: 0.503;
+  visibility: visible;
+}
+
+.card .img .hover:hover .eye img {
+  opacity: 1;
+}
+
+.card .img .hover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.card .img .overlay {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: grid;
+  place-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: var(--cyan);
+  z-index: 2;
+}
+
+.card .img .eye {
+  width: 100%;
+  height: 100%;
+}
+
+.card .img .eye img {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 3rem;
+  height: 3rem;
+  z-index: 3;
 }
 
 .card .img,
@@ -68,7 +141,7 @@ body {
 }
 
 .card .img img {
-  border-radius: 8px;
+  border-radius: 0.5rem;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -78,10 +151,15 @@ body {
   margin-bottom: 1rem;
 }
 
+.card .info .title a:hover,
+.card .info .avatar .name-avatar a:hover {
+  color: var(--cyan);
+}
+
 .card .info .description * {
   font-size: 1.125rem;
   font-weight: 300;
-  line-height: 1.4444444;
+  line-height: 1.625rem;
   color: var(--soft-blue);
 }
 
@@ -98,23 +176,28 @@ body {
 .card .info .crypto .clock-text {
   display: flex;
   align-items: center;
-  flex-basis: auto;
+}
+
+
+.card .info .crypto .icon-text .icon {
+  width: 0.6875rem;
+  height: 1.125rem;
 }
 
 .card .info .crypto .icon-text {
-  gap: 0.405rem;
+  gap: 0.41rem;
 }
 
 .card .info .crypto .icon-text .text * {
+  color: var(--cyan);
+  font-family: var(--font-family);
   font-size: 1rem;
   font-weight: 600;
-  color: var(--cyan);
 }
 
 .card .info .crypto .clock-text .icon {
   width: 1rem;
   height: 1rem;
-  padding: 1.33px;
 }
 
 .card .info .crypto .clock-text .icon img {
@@ -123,14 +206,81 @@ body {
   object-fit: cover;
 }
 
-
-
 .card .info .crypto .clock-text {
+  display: flex;
+  align-items: center;
   gap: 0.48125rem;
   color: var(--soft-blue);
 }
 
 .card .info .crypto .clock-text .text * {
+  font-family: var(--font-family);
   font-size: 1rem;
   font-weight: 400;
+}
+
+.card .info .avatar {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.card .info .avatar .img-avatar {
+  width: 2.0625rem;
+  height: 2.0625rem;
+  border-radius: 2.0625rem;
+  border: 1px solid var(--white);
+}
+
+.card .info .avatar .img-avatar img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card .info .avatar .name-avatar * {
+  color: var(--soft-blue);
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.card .info .avatar .name-avatar .custom-text {
+  color: var(--white);
+  padding-left: 0.31rem;
+}
+
+/* Media Query */
+@media (max-width: 375px) {
+  .card {
+    margin: 0 auto;
+    max-width: 20.375rem;
+    width: 100%;
+    padding: 1.5rem 1.56rem 1.5rem 1.5rem;
+  }
+
+  .card .img {
+    width: 100%;
+    max-height: 17.375rem;
+    height: 100%;
+
+  }
+
+  .card .info .title {
+    margin-bottom: 0.75rem;
+  }
+
+  .card .info .description {
+    margin-bottom: 1rem;
+  }
+
+  .card .info .crypto {
+    padding-bottom: 1rem;
+  }
+
+  .card .info .crypto .icon-text .text *,
+  .card .info .crypto .clock-text .text *,
+  .card .info .avatar .name-avatar * {
+    font-size: 0.9375rem;
+  }
+
 }
